# aakso-rubber-works

./: .gitignore  project.md  setup.md
.github/workflows/: build.yml
aakso-tauri-app/: .gitignore  dev.sh  index.html  package-lock.json  package.json  setup.bat  setup.sh  vite.config.js
aakso-tauri-app/.github/workflows/: build.yml
aakso-tauri-app/src/: main.js  styles.css
aakso-tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
aakso-tauri-app/src-tauri/src/: main.rs
